#112292529 Split controlles into separate files, to improve architecture. All views should have a separate controller in the future

--- a/www/index.html
+++ b/www/index.html
@@ -18,6 +18,10 @@
     <!-- your app's js -->
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
+    <script src="js/appCtrl.js"></script>
+    <script src="js/playlistCtrl.js"></script>
+    <script src="js/playlistsCtrl.js"></script>
+
   </head>
 
   <body ng-app="starter">
