#109295892 I added the tournament feed view and the tournametnt feed button to the menu.

--- a/www/index.html
+++ b/www/index.html
@@ -21,6 +21,7 @@
     <script src="js/appCtrl.js"></script>
     <script src="js/playlistCtrl.js"></script>
     <script src="js/playlistsCtrl.js"></script>
+    <script src="js/tournamentFeedCtrl.js"></script>
 
   </head>
 
