#109289932 There is now e-mail field instead of username field and login page is the first page to pop up when starting the app

--- a/www/index.html
+++ b/www/index.html
@@ -22,6 +22,7 @@
     <script src="js/playlistCtrl.js"></script>
     <script src="js/playlistsCtrl.js"></script>
     <script src="js/tournamentFeedCtrl.js"></script>
+    <script src="js/loginCtrl.js"></script>
 
   </head>
 
