--- a/www/index.html
+++ b/www/index.html
@@ -12,6 +12,9 @@
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
 
+    <!-- ngMessages -->
+    <script src="lib/ionic/js/angular/angular-messages.js"></script>
+
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
