--- a/www/index.html
+++ b/www/index.html
@@ -11,6 +11,8 @@
 
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
+    <script src="lib/ionic/js/angular/angular-resource.min.js"></script>
+
 
     <!-- ngMessages -->
     <script src="lib/ionic/js/angular/angular-messages.js"></script>
@@ -20,6 +22,8 @@
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
+    <script src="js/services/authenticatedUserService.js"></script>
+    <script src="js/services/serverCallService.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/appCtrl.js"></script>
     <script src="js/tournamentFeedCtrl.js"></script>
