WIP needs API connection, bug with <ion-content> hiding the swipe cards

--- a/www/index.html
+++ b/www/index.html
@@ -19,6 +19,9 @@
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
+    
+    <!-- ionic swipe card -->
+    <script src="lib/ionic/js/ionic.swipecards.js"></script>
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
@@ -28,6 +31,7 @@
     <script src="js/appCtrl.js"></script>
     <script src="js/tournamentFeedCtrl.js"></script>
     <script src="js/loginCtrl.js"></script>
+    <script src="js/ionic.swipecards.js"></script>
 
   </head>
 
