--- a/www/index.html
+++ b/www/index.html
@@ -22,6 +22,7 @@
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
+    <script src="js/appSettings.js"></script>
     <script src="js/services/authenticatedUserService.js"></script>
     <script src="js/services/serverCallService.js"></script>
     <script src="js/controllers.js"></script>
