#112919383 Timercard front-end

--- a/www/index.html
+++ b/www/index.html
@@ -29,6 +29,7 @@
     <script src="js/appCtrl.js"></script>
     <script src="js/tournamentFeedCtrl.js"></script>
     <script src="js/loginCtrl.js"></script>
+    <script src="js/angular-timer.js"></script>
 
   </head>
 
