#112921327 When clicking on a card, user is directed to a detail view of card with according id

--- a/www/index.html
+++ b/www/index.html
@@ -31,6 +31,8 @@
     <script src="js/tournamentFeedCtrl.js"></script>
     <script src="js/loginCtrl.js"></script>
     <script src="js/angular-timer.js"></script>
+    <script src="js/cardCtrl.js"></script>
+    
 
   </head>
 
