#109297574 user can navigate to maps view from side menu

--- a/www/index.html
+++ b/www/index.html
@@ -32,6 +32,7 @@
     <script src="js/loginCtrl.js"></script>
     <script src="js/angular-timer.js"></script>
     <script src="js/cardCtrl.js"></script>
+    <script src="js/mapCtrl.js"></script>
     
 
   </head>
