--- a/www/index.html
+++ b/www/index.html
@@ -19,6 +19,7 @@
     <script src="lib/ionic/js/angular/angular-messages.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
+    <script src="lib/ngCordova/dist/ng-cordova.js"></script>
     <script src="cordova.js"></script>
 
     <!-- your app's js -->
@@ -34,10 +35,15 @@
     <script src="js/cardCtrl.js"></script>
     <script src="js/mapCtrl.js"></script>
     
+    <!-- Google Maps API -->
+    <script src="http://maps.google.com/maps/api/js?key=AIzaSyBk1f4ZMBif6K-VfMs2l7tkBgMGrnzpyws&sensor=true"></script>
+    
 
   </head>
 
   <body ng-app="starter">
+    <ion-pane>
     <ion-nav-view></ion-nav-view>
+    </ion-pane>
   </body>
 </html>
