--- a/www/index.html
+++ b/www/index.html
@@ -34,6 +34,7 @@
     <script src="js/angular-timer.js"></script>
     <script src="js/cardCtrl.js"></script>
     <script src="js/mapCtrl.js"></script>
+    <script src="js/aboutCtrl.js"></script>
     
     <!-- Google Maps API -->
     <script src="http://maps.google.com/maps/api/js?key=AIzaSyBk1f4ZMBif6K-VfMs2l7tkBgMGrnzpyws&sensor=true"></script>
