#109296384 User wants to see an empty calendar

--- a/www/index.html
+++ b/www/index.html
@@ -33,6 +33,7 @@
     <script src="js/loginCtrl.js"></script>
     <script src="js/angular-timer.js"></script>
     <script src="js/cardCtrl.js"></script>
+    <script src="js/calendarCtrl.js"></script>
     <script src="js/mapCtrl.js"></script>
     <script src="js/aboutCtrl.js"></script>
     
