--- a/www/index.html
+++ b/www/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
     <title></title>
@@ -36,16 +36,17 @@
     <script src="js/calendarCtrl.js"></script>
     <script src="js/mapCtrl.js"></script>
     <script src="js/aboutCtrl.js"></script>
-    
+    <script src="js/contactsCtrl.js"></script>
+
     <!-- Google Maps API -->
     <script src="http://maps.google.com/maps/api/js?key=AIzaSyBk1f4ZMBif6K-VfMs2l7tkBgMGrnzpyws&sensor=true"></script>
-    
 
-  </head>
 
-  <body ng-app="starter">
-    <ion-pane>
+</head>
+
+<body ng-app="starter">
+<ion-pane>
     <ion-nav-view></ion-nav-view>
-    </ion-pane>
-  </body>
+</ion-pane>
+</body>
 </html>
