--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -1,29 +1,52 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
     <title></title>
 
-    <link href="lib/ionic/css/ionic.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
 
-    <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
+    <!-- compiled css output -->
     <link href="css/ionic.app.css" rel="stylesheet">
-    -->
+    <link href="css/style.css" rel="stylesheet">
 
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
+    <script src="lib/ionic/js/angular/angular-resource.min.js"></script>
+
+
+    <!-- ngMessages -->
+    <script src="lib/ionic/js/angular/angular-messages.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
+    <script src="lib/ngCordova/dist/ng-cordova.js"></script>
     <script src="cordova.js"></script>
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
+    <script src="js/appSettings.js"></script>
+    <script src="js/services/authenticatedUserService.js"></script>
+    <script src="js/services/serverCallService.js"></script>
     <script src="js/controllers.js"></script>
-  </head>
+    <script src="js/appCtrl.js"></script>
+    <script src="js/tournamentFeedCtrl.js"></script>
+    <script src="js/loginCtrl.js"></script>
+    <script src="js/angular-timer.js"></script>
+    <script src="js/cardCtrl.js"></script>
+    <script src="js/calendarCtrl.js"></script>
+    <script src="js/mapCtrl.js"></script>
+    <script src="js/aboutCtrl.js"></script>
+    <script src="js/contactsCtrl.js"></script>
 
-  <body ng-app="starter" class="platform-android platform-cordova platform-webview">
+    <!-- Google Maps API -->
+    <script src="http://maps.google.com/maps/api/js?key=AIzaSyBk1f4ZMBif6K-VfMs2l7tkBgMGrnzpyws&sensor=true"></script>
+
+
+</head>
+
+<body ng-app="starter" class="platform-android platform-cordova platform-webview">
+<ion-pane>
     <ion-nav-view></ion-nav-view>
-  </body>
+</ion-pane>
+</body>
 </html>
