--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
+    <meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval'">
     <title></title>
 
 
     <!-- compiled css output -->
     <link href="css/ionic.app.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
 
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
@@ -37,6 +37,7 @@
     <script src="js/mapCtrl.js"></script>
     <script src="js/aboutCtrl.js"></script>
     <script src="js/contactsCtrl.js"></script>
+    <script src="js/detailViewCtrl.js"></script>
 
     <!-- Google Maps API -->
     <script src="http://maps.google.com/maps/api/js?key=AIzaSyBk1f4ZMBif6K-VfMs2l7tkBgMGrnzpyws&sensor=true"></script>
