--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -44,7 +44,7 @@
 
 </head>
 
-<body ng-app="starter" class="platform-ios platform-cordova platform-webview">
+<body ng-app="starter">
 <ion-pane>
     <ion-nav-view></ion-nav-view>
 </ion-pane>
