--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -34,6 +34,7 @@
     <script src="js/angular-timer.js"></script>
     <script src="js/cardCtrl.js"></script>
     <script src="js/calendarCtrl.js"></script>
+    <script src="js/eventCtrl.js"></script>
     <script src="js/mapCtrl.js"></script>
     <script src="js/aboutCtrl.js"></script>
     <script src="js/contactsCtrl.js"></script>
