--- a/www/index.html
+++ b/www/index.html
@@ -14,7 +14,6 @@
     <script src="lib/ionic/js/ionic.bundle.js"></script>
     <script src="lib/ionic/js/angular/angular-resource.min.js"></script>
 
-
     <!-- ngMessages -->
     <script src="lib/ionic/js/angular/angular-messages.js"></script>
 
@@ -31,13 +30,16 @@
     <script src="js/appCtrl.js"></script>
     <script src="js/tournamentFeedCtrl.js"></script>
     <script src="js/loginCtrl.js"></script>
-    <script src="js/angular-timer.js"></script>
     <script src="js/cardCtrl.js"></script>
     <script src="js/calendarCtrl.js"></script>
     <script src="js/eventCtrl.js"></script>
     <script src="js/mapCtrl.js"></script>
     <script src="js/aboutCtrl.js"></script>
     <script src="js/contactsCtrl.js"></script>
+
+    <script src="lib/angular-timer/dist/angular-timer.js"></script>
+    <script src="lib/moment/min/moment.min.js"></script>
+    <script src="lib/moment-timezone/builds/moment-timezone-with-data.min.js"></script>
 
     <!-- Google Maps API -->
     <script src="http://maps.google.com/maps/api/js?key=AIzaSyBk1f4ZMBif6K-VfMs2l7tkBgMGrnzpyws&sensor=true"></script>
