--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -45,7 +45,7 @@
 
 </head>
 
-<body ng-app="starter" class="platform-android platform-cordova platform-webview">
+<body ng-app="starter">
 <ion-pane>
     <ion-nav-view></ion-nav-view>
 </ion-pane>
