--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
+    <!--todo: check if needed in app-->
+    <!--<meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval'">-->
     <meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval'">
+
     <title>EUDC 2017 event app</title>
 
 
@@ -13,7 +16,6 @@
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
     <script src="lib/ionic/js/angular/angular-resource.min.js"></script>
-
 
     <!-- ngMessages -->
     <script src="lib/ionic/js/angular/angular-messages.js"></script>
@@ -31,7 +33,6 @@
     <script src="js/appCtrl.js"></script>
     <script src="js/tournamentFeedCtrl.js"></script>
     <script src="js/loginCtrl.js"></script>
-    <script src="js/angular-timer.js"></script>
     <script src="js/cardCtrl.js"></script>
     <script src="js/calendarCtrl.js"></script>
     <script src="js/eventCtrl.js"></script>
@@ -39,13 +40,18 @@
     <script src="js/aboutCtrl.js"></script>
     <script src="js/contactsCtrl.js"></script>
 
+    <script src="lib/moment/min/moment.min.js"></script>
+    <script src="lib/moment-timezone/builds/moment-timezone-with-data.min.js"></script>
+    <script src="lib/humanize-duration/humanize-duration.js"></script>
+    <script src="lib/angular-timer/dist/angular-timer.js"></script>
+
     <!-- Google Maps API -->
     <script src="http://maps.google.com/maps/api/js?key=AIzaSyBk1f4ZMBif6K-VfMs2l7tkBgMGrnzpyws&sensor=true"></script>
 
 
 </head>
 
-<body ng-app="starter">
+<body ng-app="starter" class="platform-android platform-cordova platform-webview">
 <ion-pane>
     <ion-nav-view></ion-nav-view>
 </ion-pane>
