#109297960 #138264115 #138264173 User can now see the map of TUT campus from the Maps section

--- a/www/index.html
+++ b/www/index.html
@@ -34,10 +34,13 @@
     <script src="js/loginCtrl.js"></script>
     <script src="js/cardCtrl.js"></script>
     <script src="js/calendarCtrl.js"></script>
-    <script src="js/eventCtrl.js"></script>
-    <script src="js/mapCtrl.js"></script>
+    <script src="js/eventCtrl.js"></script>    
     <script src="js/aboutCtrl.js"></script>
     <script src="js/contactsCtrl.js"></script>
+    <script src="js/mapsCtrl.js"></script>
+    <script src="js/tlnMapCtrl.js"></script>
+    <script src="js/tutMapCtrl.js"></script>
+    
 
     <script src="lib/moment/min/moment.min.js"></script>
     <script src="lib/moment-timezone/builds/moment-timezone-with-data.min.js"></script>
