--- a/www/index.html
+++ b/www/index.html
@@ -40,6 +40,7 @@
     <script src="js/mapsCtrl.js"></script>
     <script src="js/tlnMapCtrl.js"></script>
     <script src="js/tutMapCtrl.js"></script>
+    <script src="js/roundLocationCtrl.js"></script>
     
 
     <script src="lib/moment/min/moment.min.js"></script>
