--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
     <!--todo: check if needed in app-->
     <!--<meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval'">-->
-    <meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval'">
 
     <title>EUDC 2017 event app</title>
 
@@ -35,10 +34,14 @@
     <script src="js/loginCtrl.js"></script>
     <script src="js/cardCtrl.js"></script>
     <script src="js/calendarCtrl.js"></script>
-    <script src="js/eventCtrl.js"></script>
-    <script src="js/mapCtrl.js"></script>
+    <script src="js/eventCtrl.js"></script>    
     <script src="js/aboutCtrl.js"></script>
     <script src="js/contactsCtrl.js"></script>
+    <script src="js/mapsCtrl.js"></script>
+    <script src="js/tlnMapCtrl.js"></script>
+    <script src="js/tutMapCtrl.js"></script>
+    <script src="js/roundLocationCtrl.js"></script>
+    
 
     <script src="lib/moment/min/moment.min.js"></script>
     <script src="lib/moment-timezone/builds/moment-timezone-with-data.min.js"></script>
