--- a/www/index.html
+++ b/www/index.html
@@ -41,7 +41,9 @@
     <script src="js/tlnMapCtrl.js"></script>
     <script src="js/tutMapCtrl.js"></script>
     <script src="js/roundLocationCtrl.js"></script>
-    
+    <script src="js/badgeViewCtrl.js"></script>
+
+
 
     <script src="lib/moment/min/moment.min.js"></script>
     <script src="lib/moment-timezone/builds/moment-timezone-with-data.min.js"></script>
