Profile page and logging out

--- a/www/index.html
+++ b/www/index.html
@@ -41,7 +41,7 @@
     <script src="js/tlnMapCtrl.js"></script>
     <script src="js/tutMapCtrl.js"></script>
     <script src="js/roundLocationCtrl.js"></script>
-    <script src="js/badgeViewCtrl.js"></script>
+    <script src="js/profileCtrl.js"></script>
 
 
 
